// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Settings, student enrollment link renders with disabled url for preview course 1`] = `
<span
  className="enrollment-code-link"
  onClick={[Function]}
>
  <span
    className="title"
  >
    Student Enrollment URL:
  </span>
  <span
    className="disabled-for-preview"
  >
    No enrollment URL in preview.
  </span>
</span>
`;

exports[`Course Settings, student enrollment link renders with url 1`] = `
<span
  className="enrollment-code-link"
  onClick={[Function]}
>
  <span
    className="title"
  >
    Student Enrollment URL:
  </span>
  <input
    readOnly={true}
    style={
      Object {
        "width": 42,
      }
    }
    type="text"
    value="123456"
  />
</span>
`;
